# alsa-utils

./: configure.ac
topology/: Makefile.am  pre-process-dai.c  pre-process-dapm.c  pre-process-object.c  pre-processor.h
topology/intel/: dmic-nhlt.c  dmic-nhlt.h
topology/intel/dmic/: dmic_macros.h  format.h  numbers.c  numbers.h  pdm_decim_int32_02_4323_5100_010_095.h  pdm_decim_int32_02_4375_5100_010_095.h  pdm_decim_int32_03_4375_5100_010_095.h  pdm_decim_int32_04_4318_5100_010_095.h  pdm_decim_int32_05_4325_5100_010_095.h  pdm_decim_int32_06_4172_5100_010_095.h  pdm_decim_int32_08_4156_5301_010_090.h  pdm_decim_int32_10_4156_5345_010_090.h  pdm_decim_int32_12_4156_5345_010_090.h  pdm_decim_table.h
